  * Added option --transparent to plugin "merge".
  * Added options --other, --ts-id, --original-network-id to plugin "sdt".
  * Added options --create, --create-after, --bitrate, --inter-packet to
    plugins "pat", "pmt", "bat", "sdt", "nit".
  * Added option --wide-display to command "tsanalyze" and plugin "analyze".
  * Added option --min-interval to command "tsstuff".

[BUG] Bug fixes:

  * In plugin "merge", merging CAT's from two streams was incorrect
    (incorrect PID conflict detection and endless code loop).
  * On Windows, "tslsdvb" and "tshides" could crash when using a HiDes
    UT-100A (combined received / modulator).

-------------------------------------------------------------------------------

VERSION 3.13-833

[NEW] New commands and plugins:

  * Added input plugin "http" to receive a transport stream using a URL.
  * Added support for HiDes UT-100C modulator device using utility "tshides"
    and output plugin "hides". Be sure to install the right device drivers
    from https://tsduck.io/download/hides/

[IMP] Improvements on existing commands and plugins:

  * With plugins "svremove", "svrename" and "tsrename", the removal or renaming
    now also apply to EIT's. The new option --ignore-eit can be used to prevent
    this.
  * The plugin "regulate" can now also use the PCR from the TS to regulate the
    transmission. Previously, the regulation was done on bitrate only. Added
    options are --pcr-synchronous, --pid-pcr and --wait-min.
  * The input plugin "ip" and the plugin "mpeinject" now accept the syntax
    'source-ip@multicast-ip:port' for source-specific multicast (SSM). As a
    side effect, the command "tstabdump" also accepts this syntax when
    receiving PSI/SI tables.
  * Added option --tos to output plugin "ip".

[BUG] Bug fixes:

  * Bug fix: Option --cleanup-private-descriptors in plugins "bat", "cat",
    "nit", "pmt" and "sdt" failed to cleanup contiguous private descriptors.
